# CPPTest

./: .gitignore  CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  LICENSE.md  README.md  main.cpp
LICENSE.md/: LICENSE.md
apps/: CMakeLists.txt  cpptesttest.cpp
python/: CMakeLists.txt  py_HelloWorld.cpp
src/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.hpp
